--- a/Halloapp/de.lproj/Localizable.strings
+++ b/Halloapp/de.lproj/Localizable.strings
@@ -32,13 +32,19 @@
 "activity.center.title" = "Aktivität";
 
 /* Message shown when a user first joins */
-"activity.center.welcome.item" = "Willkommen zu HalloApp!";
+"activity.center.welcome.item" = "Herzlich willkommen zu HalloApp!";
+
+/* Title for alert shown when there's no internet connectivity */
+"alert.no.internet.title" = "Keine Internetverbindung";
+
+/* Message to tell the user to try again when they have internet connectivity again */
+"alert.no.internet.try.again" = "Bitte überprüfe, ob du über eine Internetverbindung verfügst, und versuche es dann noch einmal.";
 
 /* Translation of iPhone settings app. */
 "app.ios.settings" = "Einstellungen";
 
 /* Text to show on banner when no connection is available */
-"banner.no.connection" = "Keine Internet-Verbindung";
+"banner.no.connection" = "Keine Internetverbindung";
 
 /* Title for generic Cancel button. Mostly used in popups and as such.
    Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
@@ -58,6 +64,15 @@
 
 /* Title for button that will take user to iOS settings (e.g., to enable some permission we need). */
 "button.go.to.settings" = "Meine Einstellungen";
+
+/* Title for Install button, takes the user to the HalloApp app store view where they can download the app. */
+"button.install" = "Installieren";
+
+/* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
+"button.learn.more" = "Mehr erfahren";
+
+/* Title for generic More button. Mostly used to complete some modal flow. */
+"button.more" = "Mehr";
 
 /* Title for generic Next button. Mostly used to proceed to next screen in flow. */
 "button.next" = "Weiter";
@@ -312,6 +327,9 @@
    Title for tutorial explaining how user can enable contacts permission */
 "contacts.permission.tutorial.title" = "Wie man den Zugriff auf \"Kontakte\" erlaubt";
 
+/* Alert message telling the user to try creating the group again after an error */
+"create.group.error" = "Bei der Erstellung der Gruppe ist ein Fehler aufgetreten. Bitte versuche es noch einmal";
+
 /* Text to show on profile for users you are not connected with */
 "exchange.phone.numbers.to.connect" = "Um den Kontakt herzustellen, müsst ihr eure Handynummern austauschen";
 
@@ -507,6 +525,9 @@
 /* Label for joining group action */
 "group.preview.join.group" = "GRUPPE BEITRETEN";
 
+/* Label for the number of members in the group */
+"group.preview.members" = "Mitglieder";
+
 /* Text shown to tell user the group title is tappable */
 "group.title.tap.for.info" = "Für Gruppeninfo hier tippen";
 
@@ -568,7 +589,7 @@
 "link.learnMore" = "Mehr erfahren";
 
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
-"link.update.your.app" = "Meine App aktualisieren";
+"link.update.your.app" = "Meine App aktualisieren.";
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Ich";
@@ -627,11 +648,20 @@
 /* One of the contact actions in My Post screen. */
 "mypost.action.view.profile" = "Profil ansehen";
 
+/* Message displayed to say when posts will disappear */
+"mypost.disappear.time.label" = "Deine Beiträge werden nach 30 Tagen gelöscht.";
+
 /* Confirmation when hiding posts from a certain contact. Parameter is contact's full name. */
 "mypost.hide.posts.confirmation" = "Bist du dir sicher, dass du alle deine zukünftigen Beiträge vor %@ verbergen möchtest? Du kannst dies später jederzeit ändern.";
 
 /* Placeholder text displayed in My Post Info screen when no one has seen the post yet. */
 "mypost.not.viewed.yet" = "Bislang hat keiner deinen Beitrag gesehen";
+
+/* Your Post screen: label for the row that opens the invite screen */
+"mypost.row.invite.to.halloapp" = "Zu HalloApp einladen";
+
+/* Your Post screen: label for the row that opens the privacy screen */
+"mypost.row.manage.privacy" = "Privatsphäre verwalten";
 
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Du bist kein Mitglied dieser Gruppe mehr";
@@ -797,6 +827,12 @@
 /* Title for text explaining why we need contact permissions */
 "registration.contacts.title" = "Noch ein Hinweis";
 
+/* Text indicating to the user that HalloApp is available for free on the iPhone App Store */
+"registration.free.app.notice" = "Kostenlos im iPhone App Store";
+
+/* Once the user completes registration in the app clip, this text is displayed in the AppClip prompting the user to install the full app to continue using HalloApp */
+"registration.install.app.to.continue" = "Installiere HalloApp, um fortzufahren";
+
 /* Popup that appears when user tries to register uninvited number */
 "registration.invite.only" = "Wenn du einem Gruppeneinladungslink gefolgt bist, um dich zu registrieren, klicke bitte erneut auf den Link, um die Registrierung abzuschließen und der Gruppe beizutreten.";
 
@@ -810,13 +846,13 @@
 "registration.privacy.content" = "HalloApp verwendet nur das Feld für die Handynummer, um den Kontakt mit deinen Freunden auf HalloApp herzustellen. Darüber hinaus werden keine weiteren Daten aus deinen Kontakten übermittelt.";
 
 /* Title for modal describing how we use contacts data */
-"registration.privacy.title" = "Deine Privatsphäre ist unsere höchste Priorität";
+"registration.privacy.title" = "Deine Privatsphäre ist unsere Priorität";
 
 /* Title for popup that appears when user tries to register uninvited number */
 "registration.shucks" = "Ups!";
 
 /* Shown above name and phone inputs */
-"registration.welcome" = "Willkommen!";
+"registration.welcome" = "Herzlich willkommen!";
 
 /* Instructions for how to use the safety number verification UI */
 "safety.number.instructions" = "Um die Sicherheit deiner Verbindung mit %@ zu verifizieren, prüfe bitte, ob die obige Nummer mit der auf dem Gerät angezeigten übereinstimmt oder scanne den QR-Code auf dem Handy.";
