--- a/Share Extension/de.lproj/Localizable.strings
+++ b/Share Extension/de.lproj/Localizable.strings
@@ -1,3 +1,9 @@
+/* Title for alert shown when there's no internet connectivity */
+"alert.no.internet.title" = "Keine Internetverbindung";
+
+/* Message to tell the user to try again when they have internet connectivity again */
+"alert.no.internet.try.again" = "Bitte überprüfe, ob du über eine Internetverbindung verfügst, und versuche es dann noch einmal.";
+
 /* Title for generic Cancel button. Mostly used in popups and as such.
    Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
 "button.cancel" = "Abbrechen";
@@ -16,6 +22,12 @@
 
 /* Title for button that will take user to iOS settings (e.g., to enable some permission we need). */
 "button.go.to.settings" = "Zu Einstellungen gehen";
+
+/* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
+"button.learn.more" = "Mehr erfahren";
+
+/* Title for generic More button. Mostly used to complete some modal flow. */
+"button.more" = "Mehr";
 
 /* Title for generic Next button. Mostly used to proceed to next screen in flow. */
 "button.next" = "Weiter";
@@ -77,9 +89,6 @@
 
 /* Contacts category label */
 "share.destination.contacts" = "Kontakte";
-
-/* Share on the feed label */
-"share.destination.feed" = "Feed";
 
 /* Groups category label */
 "share.destination.groups" = "Gruppen";
